[package]
name = "PacketSnifferLib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pcap = "0.9.2"
etherparse = "0.12.0"
dns-parser = "0.8.0"
dns-message-parser = "0.7.0"
simple-dns = "0.4.6"
tls-parser = "0.11.0"
hex = "0.4.3"